Quick Links spacing fix
Fixed an issue where when the Quick Links boxes on the home page stacked up into more than 1 row, the spacing between them got screwy.

--- a/mystyle.css
+++ b/mystyle.css
@@ -213,8 +213,7 @@
 		justify-content: center;
 	}
 	.content-quick-link-separator {
-		margin-left: .4em;
-		margin-right: .4em;
+		margin: 0px 8px 8px 8px;
 		padding: .2em;
 	}
 	.content-quick-link-box {
